3.7.1
- added getFrame(), to extract the i-th frame of an image

3.5.5
- now supports Cellomics .c01 image file format

3.5.4
- drawCircle() now returns the transformed image and does not modify the input image anymore 

3.5.3
- removed print click position feature

3.5.2
- added drawCircle()
- display() now prints click positions

3.5.1
- lgomp was removed from linking options, to prevent a segfault caused in OpenSUSE 11.2 and 11.3 by dynamic linking of lgomp (optionally used by ImageMagick but not used in EBImage) together with lpthread (required and used by GTK)
- removed Makevars.in
- minimal IM required version is now 6.3.7
- lower vignette image quality to save space

3.3.2
- now uses MagickCoreGenesis and MagickCoreTerminus to start/terminate ImageMagick, to be compatible with IM 6.6.x

3.3.1
- removed frameDist, matchObject
- removed stopIfNotImage, morphKern, mkball, mkbox
- removed header, assert, chooseImage
- removed resample, sharpen, umask, modulate
- removed negate, affinet, normalize2, noise
- removed mediansmooth, cgamma, enhance, denoise
- removed contrast, despeckle, edge, segment
- removed cthresh, athresh
- removed channelMix
- removed applyGaussian and pseudoZernike

3.1.3 
- merge devel with release version 3.0.1

3.0.1
- updated CHANGES
- updated manual pages
- now uses is(x, 'Image') instead of class(x)=='Image' to allow people inherit from the EBImage class
- updated INSTALL file, with new tips for Windows and MacOS users
- removed Gene*.tif old images

2.99.8
- new INSTALL
- new vignette

2.99.7
- stackObjects OK

2.99.6
- doc: propagate, combine, tile, untile, rmObjects, reenumerate, hullFeatures

2.99.5
- channel OK
- paintObjects, drawtext OK
- colors.c removed
- doc: watershed
- simpler combine

2.99.4
- deprecated channelMix
- doc: filter2, moments, cmoments, smoments, rmoments
- doc: paintObjects, getFeatures, rgbImage, channel

2.99.3
- bwlabel OK
- safer rgbImage

2.99.2
- doc: tresh